--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Test binary, build with `go test -c`
-*.test
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
